apps/management/iac/burrito-system/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: burrito-server
spec:
  hostnames: ["burrito.mcmahan.io"]
  parentRefs:
    - name: local
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: burrito-server
          port: 80
